--- a/NetflixProject/NetflixProject/NetflixProject.csproj
+++ b/NetflixProject/NetflixProject/NetflixProject.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Genre.cs" />
+    <Compile Include="Movie.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rating.cs" />
+    <Compile Include="Title.cs" />
+    <Compile Include="TvShow.cs" />
+    <Compile Include="TvShowTitles.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
